# instability

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml  test.yml
example/: CHANGELOG.md  Cargo.toml  README.md
example/src/: lib.rs
src/: item_like.rs  lib.rs  stable.rs  unstable.rs
