[package]
name = "instability-example"
version = "0.0.0"
description = "Example crate demonstrating instablity usage."
authors = ["Stephen M. Coakley <me@stephencoakley.com>", "Joshka"]
edition = "2021"
publish = false

[features]
unstable-risky-function = []
unstable-risky-struct = []

[dependencies]
instability = { path = "../" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
